# ReziEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md
ReziCLI/: CMakeLists.txt  Entry.cpp
ReziEdit/: CMakeLists.txt  Desktop.cpp  Editor.cpp  Editor.hpp  Entry.cpp
ReziEdit/gui/: Button.cpp  Button.hpp  TextBox.cpp  TextBox.hpp  Utils.cpp  Utils.hpp
app/: CMakeLists.txt  Desktop.cpp
examples/: spec.rezi  spec.toml
include/: application.hpp  button.hpp  graph.hpp  point.hpp  vector2d.hpp
libReziEngine/: CMakeLists.txt  ReziContext.cpp  ReziContext.hpp  ReziSolver.cpp  ReziSolver.hpp  Vec2D.hpp  Version.hpp
src/: Application.cpp  Application.hpp  Button.cpp  Button.hpp  CMakeLists.txt  MatrixS2D.hpp  Point.hpp  TextBox.cpp  TextBox.hpp  Vec2D.hpp  application.cpp  main.cpp
